[tool.poetry]
name = "youtube-scrap-be"
version = "0.1.0"
description = ""
authors = ["Iman <imannurohman1@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_scrap_be"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
selenium = "^4.7.0"
fuckit = "^4.8.1"
webdriver-manager = "^3.8.5"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
